tests/ui/compile-fail/init/field_value_wrong_type.rs
use pinned_init::*;

struct Foo {
    a: usize,
}

fn main() {
    let _ = init!(Foo { a: () });
}
